# wyrebox

./: .clang-tidy  .editorconfig  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  meson.build  meson_options.txt
tests/admin/: meson.build  test-admin-health-status.c  test-admin-readiness-status.c  test-admin-schema-version.c  test-admin-socket-status.c
tests/backup/: meson.build  test-backup-command.c  test-backup-manifest.c  test-backup-restore-plan.c  test-backup-set.c  test-backup-tool-main.c
tests/benchmarks/: meson.build  test_issue_0028_benchmark_scaffold.py  test_issue_0028_duckdb_query_template_subject_contains_benchmark_scaffold.py  test_issue_0028_journal_writer_benchmark_scaffold.py  test_issue_0028_object_store_benchmark_scaffold.py  test_issue_0028_object_store_get_benchmark_scaffold.py  wyrebox-benchmark-duckdb-query-template-subject-contains.c  wyrebox-benchmark-eml-ingestor.c  wyrebox-benchmark-journal-writer.c  wyrebox-benchmark-object-store-get.c  wyrebox-benchmark-object-store.c  wyrebox-benchmark-postfix-lmtp-session.c  wyrebox-benchmark-postfix-pipe-input.c  wyrebox-benchmark-report.c  wyrebox-benchmark-report.h
tests/build-config/: meson.build  test-build-config.c
tests/daemon-api/: meson.build  test-daemon-api-capnp-smoke.cc  test-daemon-capnp-codec.cc  test-daemon-capnp-uds.cc  test-daemon-client-identity.c  test-daemon-config.c  test-daemon-connection-server.c  test-daemon-connection-session.c  test-daemon-delivery-ingestion-dispatcher.c  test-daemon-delivery-ingestion-request.c  test-daemon-derived-view-catalog-lifecycle.c  test-daemon-derived-view-package-catalog.c  test-daemon-derived-view-package.c  test-daemon-duckdb-query-template-catalog.c  test-daemon-duckdb-query-template-dispatcher.c  test-daemon-duckdb-query-template-request.c  test-daemon-duckdb-query-template-service-duckdb.c  test-daemon-error-frame.c  test-daemon-error.c  test-daemon-export-dataset-catalog.c  test-daemon-export-job.c  test-daemon-export-range.c  test-daemon-export-request.c  test-daemon-export-schema.c  test-daemon-fact-batch-import-dispatcher.c  test-daemon-fact-batch-import-request.c  test-daemon-fact-batch-import-service.c  test-daemon-fact-mutation-dispatcher.c  test-daemon-fact-mutation-request.c  test-daemon-fact-mutation-service.c  test-daemon-flag-keyword-update-dispatcher.c  test-daemon-flag-keyword-update-request.c  test-daemon-frame-io.c  test-daemon-mail-event-stream-request.c  test-daemon-mail-event-stream-service.c  test-daemon-mailbox-catalog-duckdb.c  test-daemon-mailbox-list-request.c  test-daemon-mailbox-list-result.c  test-daemon-mailbox-select-dispatcher.c  test-daemon-mailbox-select-request.c  (+22 more)
tests/dovecot/: meson.build  test-dovecot-build-contract.py  test-dovecot-daemon-client.c  test-dovecot-plugin-load-smoke-stub-registration.c  test-dovecot-plugin-load-smoke.c  test-dovecot-plugin-mailbox-smoke-stub-registration.c  test-dovecot-plugin-mailbox-smoke.c  test-dovecot-plugin-source-contract.py  test-dovecot-plugin-symbols.py  test-dovecot-source-contract.py
tests/facts/: meson.build  test-deterministic-fact-extractor.c  test-fact-journal-snapshot.c  test-fact-reconciliation.c  test-fact-record.c
tests/ingestion/: meson.build  test-delivery-catchup.c  test-delivery-fetcher.c  test-delivery-materializer.c  test-delivery-projection.c  test-delivery-replay-validator.c  test-eml-duplicate-behavior.c  test-eml-ingestion-roundtrip.c  test-eml-ingestor.c  test-eml-metadata.c  test-rfc5322-date.c
tests/journal/: meson.build  test-daemon-audit-payload.c  test-derived-view-membership-changed-payload.c  test-fact-mutation-journal.c  test-journal-event.c  test-journal-reader.c  test-journal-writer.c  test-message-delivered-journal.c  test-message-delivered-payload.c
tests/maildir/: meson.build  test-maildir-import-plan.c  test-maildir-scanner.c
tests/migration/: meson.build  test-schema-metadata-store.c  test-schema-migration.c
tests/object-store/: meson.build  test-eml-byte-preservation.c  test-local-object-store.c
tests/postfix/: meson.build  test-postfix-lmtp-delivery-bridge.cc  test-postfix-lmtp-delivery.cc  test-postfix-lmtp-executable.cc  test-postfix-lmtp-listener.cc  test-postfix-lmtp-reply.c  test-postfix-lmtp-session.c  test-postfix-pipe-executable.cc  test-postfix-pipe-input.c  test-postfix-pipe-outcome.c  test-postfix-pipe-real-daemon.c
tests/wirelog/: meson.build  test-derived-view-materializer-wirelog.c  test-derived-view-materializer.c  test-wirelog-derived-membership.c  test-wirelog-evaluation.c  test-wirelog-link-smoke.c  test-wirelog-program.c  test-wirelog-rule-definition.c  test-wirelog-rule-version.c  test-wirelog-source.c
wyrebox/: meson.build  wyrebox-build-config.h.in  wyrebox-daemon-api.capnp  wyrebox-daemon-error-frame.h  wyrebox-daemon-fact-mutation-dispatcher.h  wyrebox-daemon-fact-mutation-request.c  wyrebox-daemon-fact-mutation-request.h  wyrebox-daemon-fact-mutation-service.c  wyrebox-daemon-fact-mutation-service.h  wyrebox-daemon-mailbox-list-dispatcher.c  wyrebox-daemon-mailbox-list-request.c  wyrebox-daemon-mailbox-list-request.h  wyrebox-daemon-mailbox-list-result.c  wyrebox-daemon-mailbox-list-result.h  wyrebox-daemon-mailbox-list-service.c  wyrebox-daemon-mailbox-list-service.h  wyrebox-daemon-request-router.c  wyrebox-daemon-request-router.h  wyrebox-daemon-response-frame.c  wyrebox-daemon-response-frame.h  wyrebox-daemon-runtime.c  wyrebox-daemon-runtime.h  wyrebox-daemon-success-receipt.c  wyrebox-daemon-success-receipt.h  wyrebox-delivery-catchup.c  wyrebox-delivery-catchup.h  wyrebox-delivery-materializer.c  wyrebox-delivery-projection.c  wyrebox-delivery-projection.h  wyrebox-delivery-replay-validator.c  wyrebox-deterministic-fact-extractor.c  wyrebox-eml-ingestor.c  wyrebox-eml-ingestor.h  wyrebox-eml-metadata.c  wyrebox-eml-metadata.h  wyrebox-fact-record.c  wyrebox-fact-record.h  wyrebox-journal-reader.c  wyrebox-journal-reader.h  wyrebox-journal-writer.c  (+9 more)
wyrebox/admin/: wyrebox-admin-health-status.c  wyrebox-admin-health-status.h  wyrebox-admin-health.c  wyrebox-admin-health.h  (+7 more)
(+331 files in other folders)
