option(
  'capnp',
  type: 'feature',
  value: 'auto',
  description: 'Cap\'n Proto compiler for schema syntax validation',
)

option(
  'capnp_serialization',
  type: 'feature',
  value: 'auto',
  description: 'Cap\'n Proto compiler and runtime for generated API serialization',
)

option(
  'wirelog_runtime',
  type: 'feature',
  value: 'enabled',
  description: 'Required Wirelog runtime dependency',
)
