option(
  'capnp',
  type: 'feature',
  value: 'auto',
  description: 'Cap\'n Proto compiler for schema syntax validation',
)

option(
  'capnp_serialization',
  type: 'feature',
  value: 'auto',
  description: 'Cap\'n Proto compiler and runtime for generated API serialization',
)

option(
  'duckdb_root',
  type: 'string',
  value: '',
  description: 'Path to a source-built DuckDB (with include/ and lib/) for ' +
    'architectures without a bundled prebuilt, e.g. arm64',
)

option(
  'wirelog_runtime',
  type: 'feature',
  value: 'enabled',
  description: 'Required Wirelog runtime dependency',
)

option(
  'dovecot_backend',
  type: 'feature',
  value: 'disabled',
  description: 'Enable WyreBox Dovecot backend integration option',
)

option(
  'dovecot_source_dir',
  type: 'string',
  value: '',
  description: 'Path to a Dovecot source tree for contract validation',
)

option(
  'dovecot_build_dir',
  type: 'string',
  value: '',
  description: 'Path to a configured Dovecot build tree containing config.h',
)

option(
  'dovecot_loader_smoke',
  type: 'feature',
  value: 'disabled',
  description: 'Enable opt-in Dovecot module loader smoke test',
)

option(
  'dovecot_loader_archive',
  type: 'string',
  value: '',
  description: 'Path to Dovecot src/lib/.libs/liblib.a for loader smoke test',
)

option(
  'dovecot_loader_extra_link_args',
  type: 'array',
  value: [],
  description: 'Extra linker arguments needed by the Dovecot loader archive',
)
